--- a/ansible/roles/localisation/tasks/timezone.yml
+++ b/ansible/roles/localisation/tasks/timezone.yml
@@ -1,7 +1,7 @@
 ---
 - name: time zone
   file:
-    src: /usr/share/zoneinfo/Europe/Stockholm
+    src: "/usr/share/zoneinfo/{{ timezone }}"
     dest: /etc/localtime
     state: link
 
