--- a/ansible/roles/localisation/tasks/timezone.yml
+++ b/ansible/roles/localisation/tasks/timezone.yml
@@ -1,5 +1,5 @@
 ---
-- name: time zone
+- name: "Set time zone to {{ timezone }}"
   file:
     src: "/usr/share/zoneinfo/{{ timezone }}"
     dest: /etc/localtime
