--- a/ansible/roles/localisation/tasks/timezone.yml
+++ b/ansible/roles/localisation/tasks/timezone.yml
@@ -1,9 +1,11 @@
 ---
 - name: "Set time zone to {{ timezone }}"
+  become: yes
   file:
     src: "/usr/share/zoneinfo/{{ timezone }}"
     dest: /etc/localtime
     state: link
 
 - name: Sync time with hardware clock
-  shell: hwclock --systohc
+  become: yes
+  command: hwclock --systohc
