--- a/ansible/roles/localisation/tasks/timezone.yml
+++ b/ansible/roles/localisation/tasks/timezone.yml
@@ -1,7 +1,7 @@
 ---
 - name: "Set time zone to {{ timezone }}"
   become: yes
-  file:
+  ansible.builtin.file:
     src: "/usr/share/zoneinfo/{{ timezone }}"
     dest: /etc/localtime
     state: link
