Replace command with ansible.builtin.command

--- a/ansible/roles/localisation/tasks/locales.yml
+++ b/ansible/roles/localisation/tasks/locales.yml
@@ -7,7 +7,7 @@
 
 - name: run locale-gen
   become: yes
-  command: locale-gen
+  ansible.builtin.command: locale-gen
 
 - name: Init /etc/locale.conf
   become: yes
